--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "babel-preset-env": "^1.6.1",
     "node-sass": "^4.7.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^2.5.3"
+  }
 }
